--- a/feedback/templates/feedback/feedback_form.html
+++ b/feedback/templates/feedback/feedback_form.html
@@ -55,7 +55,7 @@
       {% include "feedback/feedback_form_partial.html" %}
     </div>
     <div class="actions">
-      <input type="submit" value="Send" class="btn primary">
+      <input type="submit" value="{% trans "Send" %}" class="btn primary">
     </div>
   </fiedlset>
 </form>
