--- a/feedback/templates/feedback/feedback_form_partial.html
+++ b/feedback/templates/feedback/feedback_form_partial.html
@@ -3,10 +3,13 @@
       <div>{{ field }}</div>
     {% else %}
       {% if field.errors %}{{ field.errors }}{% endif %}
+
       <p
         {% if field.errors %} class="error"{% endif %}
         {% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
-        {{ field.label_tag }} {{ field }}
+        {{ field.label_tag }}
+	{% for error in form.field.errors %} <span class="label important">{{ error|escape }}</span>{% endfor %}
+	{{ field }}
       </p>
     {% endif %}
   {% endfor %}
