--- a/feedback/templates/feedback/feedback_form_partial.html
+++ b/feedback/templates/feedback/feedback_form_partial.html
@@ -2,13 +2,11 @@
     {% if field.is_hidden %}
       <div>{{ field }}</div>
     {% else %}
-      {% if field.errors %}{{ field.errors }}{% endif %}
-
       <p
         {% if field.errors %} class="error"{% endif %}
         {% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
         {{ field.label_tag }}
-	{% for error in form.field.errors %} <span class="label important">{{ error|escape }}</span>{% endfor %}
+	{% for error in field.errors %} <span class="label important">{{ error|escape }}</span>{% endfor %}
 	{{ field }}
       </p>
     {% endif %}
